--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: vedic
+name: vedic_math
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,14 +46,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/logo.gif
-    - images/math.png
-    - images/maths.png
-    - images/AKL.png
-    - images/ten.png
-    - images/five.png
-    - images/blackboard.png
-    - images/quiz.png
+    - images/kids.jpg
+    - images/kid.png
+    - images/ideas.png
+    - images/rocket.png
+    - images/thinking.png
+    - images/children.png
+    - images/logo.jpg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -67,12 +67,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: ConcertOne
+    - family: FredokaOne
       fonts:
-        - asset: fonts/ConcertOne-Regular.ttf
-    - family: CaveatBrush
-      fonts:
-        - asset: fonts/CaveatBrush-Regular.ttf
+        - asset: fonts/FredokaOne-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
