--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ flutter:
     - images/thinking.png
     - images/children.png
     - images/logo.jpg
+    - images/yogi.png
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
